# automaton-auditor

./: .env.example  .gitignore  README.md  pyproject.toml  rubric.json  run_audit.py  run_ui.py  test_basic_functionality.py  test_complete_graph.py  test_graph.py
audit/report_oneself_generated/: report.md
nodes/: detectives.py
reports/: interim_report.md
src/: context_manager.py  graph.py  judges.py  llm.py  llm_router.py  state.py
src/nodes/: aggregator.py  detectives.py  judges.py  justice.py
src/tools/: doc_tools.py  repo_tools.py  vision_tools.py
src/utils/: rubric_loader.py
tools/: doc_tools.py  repo_tools.py
web_ui/: README.md  app.py
