[project]
name = "automaton_auditor"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langgraph",
    "langchain", 
    "langchain-openai",
    "pydantic",
    "pypdf",
    "python-dotenv",
    "docling",
    "tree-sitter",
    "tree-sitter-python"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Web UI dependencies (optional)
[project.optional-dependencies]
web = [
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
    "pandas>=2.0.0"
]