[project]
name = "automaton_auditor"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-openai",
    "pydantic",
    "pypdf",
    "python-dotenv",
    "docling",
    "tree-sitter",
    "tree-sitter-python"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]